@@ -1,30 +1,31 @@
 # CMakeFiles.txt for volregrid
 #
 # Andrew Janke - a.janke@gmail.com
-
+#
+# do this:
+# export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:/opt/minc/lib
+#
+# to ensure that CMake finds /opt/minc/lib/LIBMINCConfig.cmake
 
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(VOLREGRID)
 
-#INCLUDE( ${LIBMINC_USE_FILE} )
-ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
 
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)  
 
-# check for prereqs
-INCLUDE(CheckFunctionExists)
-#CHECK_FUNCTION_EXISTS(mkstemp  HAVE_MKSTEMP)
+FIND_PACKAGE(LIBMINC REQUIRED)
+FIND_PACKAGE(FLEX REQUIRED)
+FIND_PACKAGE(GSL REQUIRED)
+INCLUDE( ${LIBMINC_USE_FILE} )
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_SOURCE_DIR}/config.h @ONLY)  
+FLEX_TARGET(lex lex.l ${CMAKE_CURRENT_BINARY_DIR}/lex.c )
 
-FIND_PACKAGE(FLEX)
-#FIND_PACKAGE(LIBMINC REQUIRED)
-
-FLEX_TARGET(lex lex.l lex.c )
-
+LINK_LIBRARIES(${LIBMINC_LIBRARIES} ${GSL_LIBRARIES})
 
 ADD_EXECUTABLE(volregrid
                 volregrid.c
@@ -35,7 +36,7 @@ ADD_EXECUTABLE(volregrid
                 ${FLEX_lex_OUTPUTS}
                )
 
-TARGET_INCLUDE_DIRECTORIES(volregrid PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} /opt/minc/include )
-TARGET_LINK_LIBRARIES(volregrid ${FLEX_LIBRARIES} m /opt/minc/lib )
-                                                                                                                                                                    
+
 INSTALL( TARGETS volregrid  DESTINATION bin)
+
+
